--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gunjan <patelgunjan777@gmail.com>",
   "dependencies": {
     "express": "^4.13.3",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "bower": "^1.3.12"
   }
 }
