--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "express": "^4.13.3",
     "request": "^2.65.0",
+    "mongodb":"*",
+    "body-parser":"*",
     "bower": "^1.3.12"
   }
 }
